Ajustando e criando componentes

--- a/src/app/first-page/components/about/about.component.scss
+++ b/src/app/first-page/components/about/about.component.scss
@@ -2,7 +2,7 @@
 
 .about-section {
   padding: 5rem 0;
-  background: linear-gradient(135deg, lighten($bege, 3%) 0%, $bege 50%, lighten($bege, 2%) 100%);
+  background: $bege;
   overflow: hidden;
   position: relative;
 
