--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'style/variable';
+
 *{
   margin: 0;
   padding: 0;
@@ -9,6 +11,8 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   letter-spacing: 0.3px;
+  overflow-x: hidden;
+  background: $bege;
 }
 
 h1, h2, h3, h4, h5, h6 {
