--- a/src/app/first-page/first-page.component.html
+++ b/src/app/first-page/first-page.component.html
@@ -1,22 +1,7 @@
 <app-header></app-header>
 <app-carousel></app-carousel>
-<!-- <app-promotion></app-promotion> -->
 <app-about></app-about>
-<!-- Sessão para os cilios -->
-<app-cilios></app-cilios>
-
-<!-- Separador moderno com título -->
-<div class="section-transition">
-  <div class="transition-content">
-    <svg viewBox="0 0 1440 120" preserveAspectRatio="none" class="transition-svg">
-      <path fill="#fff0f5" d="M0,80 Q360,120 720,80 T1440,80 L1440,120 L0,120 Z"/>
-    </svg>
-    <h1 class="transition-title">Piercing Dental</h1>
-    <p class="transition-desc">Brilhe com estilo! Conheça nossos serviços de piercing dental.</p>
-  </div>
-</div>
-
-<!-- Sessão para o piercing dental -->
-<app-dental></app-dental>
+<app-divider></app-divider>
+<app-jobs></app-jobs>
 <app-price-table></app-price-table>
 <app-footer></app-footer>
