--- a/src/app/first-page/components/footer/footer.component.html
+++ b/src/app/first-page/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div class="footer-content">
-    <h3>Lais Ribeiro</h3>
+    <h3>Livia Barreto</h3>
     <p>Realçando sua beleza com amor e delicadeza 💖</p>
 
     <ul class="footer-links">
@@ -14,6 +14,6 @@
       <a href="https://wa.me/5511961006415" target="_blank">WhatsApp</a>
     </div>
 
-    <p class="footer-copy">© {{ currentYear }} Lais Barreto Ribeiro da Silva. Todos os direitos reservados.</p>
+    <p class="footer-copy">© {{ currentYear }} Livia Barreto Ribeiro da Silva. Todos os direitos reservados.</p>
   </div>
 </footer>
