--- a/src/app/first-page/components/jobs/jobs.component.html
+++ b/src/app/first-page/components/jobs/jobs.component.html
@@ -13,6 +13,7 @@
     <!-- Área onde os componentes de serviços serão inseridos -->
     <div class="services-container">
       <app-labio></app-labio>
+      <app-vasos></app-vasos>
     </div>
 
     <!-- Call to action -->
