Ajustando e criando imagens

--- a/src/app/first-page/components/about/about.component.html
+++ b/src/app/first-page/components/about/about.component.html
@@ -34,7 +34,7 @@
       </p>
     </div>
     <div class="about-photo">
-      <img src="assets/livia-perfil.jpg" alt="Dra. Livia Ribeiro - Biomédica Esteta" />
+      <img src="assets/livia.jpg" alt="Dra. Livia Ribeiro - Biomédica Esteta" />
     </div>
   </div>
 </section>
