--- a/src/app/first-page/components/carousel/carousel.component.scss
+++ b/src/app/first-page/components/carousel/carousel.component.scss
@@ -44,9 +44,14 @@
     position: absolute;
     inset: 0;
     background-size: cover;
-    background-position: center;
+    background-position: center center;
     background-repeat: no-repeat;
     z-index: 1;
+    
+    // Garante que a imagem cubra toda a área
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .slide-overlay {
