--- a/src/app/first-page/components/carousel/carousel.component.scss
+++ b/src/app/first-page/components/carousel/carousel.component.scss
@@ -15,6 +15,22 @@
   width: 100%;
   height: 600px;
   overflow: hidden;
+
+  @media (max-width: 1024px) {
+    height: 500px;
+  }
+
+  @media (max-width: 768px) {
+    height: 450px;
+  }
+
+  @media (max-width: 600px) {
+    height: 400px;
+  }
+
+  @media (max-width: 480px) {
+    height: 350px;
+  }
 }
 
 .carousel-wrapper {
@@ -40,18 +56,29 @@
     opacity: 1;
   }
 
+  .slide-picture {
+    position: absolute;
+    inset: 0;
+    z-index: 1;
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
   .slide-image {
     position: absolute;
     inset: 0;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    z-index: 1;
-    
-    // Garante que a imagem cubra toda a área
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center center;
+    
+    // Melhora a qualidade de renderização
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: crisp-edges;
+    
+    // Suaviza transições
+    transition: opacity 0.3s ease;
   }
 
   .slide-overlay {
